<resources>
    <string name="app_name">SMS</string>

    <string name="sim_slot_1">SIM 1</string>
    <string name="sim_slot_2">SIM 2</string>
    <string name="sim_slot_1_with_operator">SIM 1 (%s)</string>
    <string name="sim_slot_2_with_operator">SIM 2 (%s)</string>
    <string name="myself_phone_number">Myself Phone Number</string>
    <string name="opposite_phone_number">Opposite Phone Number</string>
    <string name="server_number">Server Number</string>
    <string name="echo_server">Who Am I</string>
    <string name="sending">sending...</string>
    <string name="sending_to">sending to %s...</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="saved">Saved %s</string>
    <string name="save_success">Save Success</string>
    <string name="content">Content</string>
    <string name="last_sms">Last Sms</string>
    <string name="all_sms">All Sms</string>
    <string name="copy">Copy</string>
    <string name="copy_opposite_number">Copy Opposite Number</string>
    <string name="copy_myself_number">Copy Myself Number</string>
    <string name="copy_content">Copy Content</string>
    <string name="copy_all">Copy All</string>
    <string name="copy_success">Copy Success</string>
    <string name="operator_china_mobile">China Mobile</string>
    <string name="operator_china_unicom">China Unicom</string>
    <string name="operator_china_telecom">China Telecom</string>
    <string name="operator_unknown">Unknown</string>
    <string name="format_string" translatable="false">%s : %s</string>
    <string name="sms_phone_number_pref_key" translatable="false">sms_sub_phone_number</string>
</resources>
